fix(appToolbar): Used built in angular filter to limit the length of the dashboard names in the dropup to prevent the icons from drawing weird when the name was too long. #511

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -659,6 +659,10 @@ body > div.classBanner:last-of-type {
 
 }
 
+.dropdown-menu > li > a > i {
+  margin-right:8px;
+}
+
 .icon-pencil-grayLightest.pull-right {
 
   &:hover, &:focus{
